objects/Item_Files__c.object
<CustomObject>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Front Label</fullName>
                </value>
                <value>
                    <fullName>Back Label</fullName>
                </value>
                <value>
                    <fullName>Necker Label</fullName>
                </value>
                <value>
                    <fullName>Bottle Shot</fullName>
                </value>
                <value>
                    <fullName>Misc Label One</fullName>
                </value>
                <value>
                    <fullName>Misc Label Two</fullName>
                </value>
                <value>
                    <fullName>Front Bottle</fullName>
                </value>
                <value>
                    <fullName>Back Bottle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Size__c</fullName>
        <formula>IF(File_Size_in_Bytes__c &gt; 1024,
IF(File_Size_in_Bytes__c &gt; 1048576,
IF(File_Size_in_Bytes__c &gt; 1073741824,
TEXT(ROUND((File_Size_in_Bytes__c /1073741824),2)) &amp; &quot; GB&quot;,
TEXT(ROUND((File_Size_in_Bytes__c /1048576),2)) &amp; &quot; MB&quot;),
TEXT(ROUND((File_Size_in_Bytes__c /1024),2)) &amp; &quot; KB&quot;),
TEXT(File_Size_in_Bytes__c) &amp; &quot; bytes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Size_in_Bytes__c</fullName>
        <label>File Size in Bytes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Latest_Version__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Latest Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Active__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item - Active</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipName>Item_In_Process_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_IP_Relationship__c</fullName>
        <formula>Parent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item - IP Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Height__c</fullName>
        <label>Label Height</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Width__c</fullName>
        <label>Label Width</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Folder_Id__c</fullName>
        <label>Parent Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <referenceTo>Item_Update__c</referenceTo>
        <relationshipName>Item_Files</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Preview_Key__c</fullName>
        <label>Preview Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preview_Version_Id__c</fullName>
        <label>Preview Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thumbnail_Key__c</fullName>
        <label>Thumbnail Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thumbnail_Version_Id__c</fullName>
        <label>Thumbnail Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Description__c</fullName>
        <label>Version Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Id__c</fullName>
        <label>Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIP__c</fullName>
        <defaultValue>true</defaultValue>
        <label>WIP</label>
        <type>Checkbox</type>
    </fields>
    <label>Item Files</label>
    <nameField>
        <displayFormat>IFN{0}</displayFormat>
        <label>Item File No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>